# minka

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  README_ES.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/copilot/: AGENTS.md  KEYGEN.md  MASTER-INSTRUCTIONS.md  QUICK-REFERENCE.md  TOOLS.md  agile-security.SKILL.md  instructions.md  mcp.json  osint.SKILL.md  red-team.SKILL.md  security-architect.SKILL.md  vuln-researcher.SKILL.md
.github/copilot/agents/: minka.agent.yml  vulnerability-researcher.AGENT.md
.github/workflows/: ci.yml  security-audit.yml
docker/: .env.example  Dockerfile.labs  Dockerfile.minka  docker-compose.yml
docs/: COMMANDS.md  GETTING_STARTED.md  PERSONALITY.md  TFM-PROPUESTA.md
mcp-server/: README.md  server.py
mcp-server/tools/: __init__.py  cases.py  experts.py  mitre_attack.py  narrative.py  quotes.py  ucm_curriculum.py  vulnerabilities.py
mcp_server/: __init__.py  server.py
mcp_server/tools/: ai_security.py  cases.py  clean_architecture.py  mitre_attack.py  narrative.py  vulnerabilities.py
scripts/: github-setup.sh  setup.sh  start.sh  stop.sh  test.sh
src/agents/: __init__.py
src/agents/osint/: __init__.py  agent.py
src/agents/red_team/: __init__.py  agent.py
src/cli/: interactive.py  main.py
src/cli/commands/: __init__.py  analyze.py  chat.py  lab.py  scan.py
src/cli/ui/: __init__.py  console.py
src/core/: __init__.py  client.py  config.py  session.py
src/core/personality/: IDENTITY.md  SOUL.md  __init__.py
src/skills/: __init__.py  vuln_researcher.py
src/tools/: __init__.py  nmap_integration.py  security_tools.py
tests/unit/: test_client.py  test_config.py  test_vuln_researcher.py
